@@ -7,11 +7,11 @@
     <artifactId>Concurrency</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-   <properties>
-        <maven.compiler.source>24</maven.compiler.source>
-        <maven.compiler.target>24</maven.compiler.target>
-		<junit.version>5.10.2</junit.version>
-		<assertj.version>3.26.0</assertj.version>
+    <properties>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target>
+        <junit.version>5.13.4</junit.version>
+        <assertj.version>3.27.4</assertj.version>
     </properties>
 
     <dependencies>
@@ -25,7 +25,23 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
-			<scope>test</scope>
+            <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.0</version> <!-- Use a recent version -->
+                <configuration>
+                    <release>25</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
